--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,6 +2,15 @@
     <h2>Add Sesssion Board</h2>
     <hr>
     <%= form_for @group do |f| %>
+    
+    <% if @group.errors.any? %>
+    <url>
+        <% @group.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+        <% end %>
+    </url>
+    <% end %>
+    
     TiTle
     <%= f.text_field :title %>
     <br>
